frontend/src/sass/table.scss
@use './variables.scss' as *;
@use './fonts.scss' as *;


.schedule-container {
  &.loading {
    opacity: 0;
    transform: translateY(20px);
  }

  &.loaded {
    opacity: 1;
    transform: translateY(0);
    transition: opacity 0.6s ease, transform 0.6s ease;
  }

  p{
    font-family: 'Manrope', serif;
  }
}

//анимация полявления 
@keyframes slideIn {
  to {
    opacity: 1;
    transform: translateX(0);
  }
}


//стили таблицы

.table {
  background-color: $table-white;
  &.dark {
    background-color: $dark4;
    p, strong, th {
      color: rgba(231, 231, 231, 0.9);
    }
    tr {
      border-bottom: 1px solid $dark-grey;
    }
    thead {
      tr:not(.table) {
        background-color: $dark3;
  
      }
    }

    tbody {
      tr:last-of-type {
        border-bottom: 2px solid $dark1;
  
      }
    }
    .active-day {
      p:first-child::after {
        color: #959ec3bf;
        content: " (сегодня)";
      }
    }
  }

  border-collapse: collapse;
  width: 98.25%;
  border: #bce7ff;
  font-family: 'Manrope', sans-serif;
  box-shadow: 10px 10px 10px 10px rgba(2, 0, 0, 0.1);


  margin-top: 25px;
  margin-right: 13px;

  thead {
    height: 60px;

    th {
      padding: 15px 10px;
      text-align: left;
      font-weight: 600;

      p:first-child {
        font-weight: normal;
        font-size: small;

        @media (max-width: 1200px) {
          font-size: 14px;
        }

        @media (max-width: 1100px) {
          font-size: 11px;
        }
      }
    }

    p {
      font-size: 16px;

      @media (max-width: 1200px) {
        font-size: 14px;
      }

      @media (max-width: 1100px) {
        font-size: 11px;
      }
    }



    tr:not(.table) {
      background-color: rgba(46, 110, 205, 0.2);
      text-align: left;

    }


  }

  th:first-child {
    font-size: 16px;
    @media (max-width: 1200px){
      font-size: 14px;
    }
    @media (max-width: 1100px){
      font-size: 12px;
    }
  }

  th,
  td {

    padding: 12px 0;
    padding-left: 10px;
    min-width: 90px;
    max-width: 150px;
    
    &:first-child {
      text-align: left;
      font-weight: bold;
      
      p:last-child {
        font-size: 14px;
        font-weight: normal;
        @media (max-width: 1100px){
          font-size: 12px;
        }
      }
    }

  }

  tbody {
    
    tr {
      @for $i from 1 through 15 {
        &:nth-child(#{$i}) {
          animation-delay: #{$i * 0.07}s;
        }
      }

      border-bottom: 1px solid #dddddd;
      opacity: 0;
      transform: translateX(-30px);
      animation: slideIn 0.4s ease forwards;
    }

    tr:last-of-type {
      border-bottom: 2px solid rgba(46, 110, 205, 0.3);

    }

  }


  td {
    font-size: 14px;
    padding: 10px;
    vertical-align: top;

    @media (max-width:1200px) {
      font-size: 12px;
    }
    @media (max-width:1100px) {
      font-size: 10px;
    }
  }

  .active-day {
    p:first-child::after {
      color: #132059bf;
      content: " (сегодня)";
    }
  }

  .homework {
    display: inline-flex;
    cursor: pointer;

    img {
      opacity: 0.5;
      left: 3px;
      top: 1px;
      position: relative;

      @media (min-width: 1100px) {
        scale: 1.5;
      }

      @media (max-width: 1100px) {
        top: 3px;
        left: 1px;
      }

    }

  }

}


.lesson-item {

  
  margin-bottom: 10px;
  padding: 8px;
  border-radius: 4px;

  &.lesson-type {
    color: #dddddd;
  }

  &#lec {
    border-left: 3px solid $lec;
  }

  .lecture {
    background: $lec;
  }

  &#upr {
    border-left: 3px solid $upr;
  }

  .practice {
    background: $upr;
  }

  &#lab {
    border-left: 3px solid $lab;
  }

  .lab {
    border-left: 3px solid $lab;
  }

}

//НЕ ТРОГАТЬ СЕЛЕКТОР С МЕСТА, ТАК НАДО, ХОТЬ 
// И СИНТАКСИС SCSS НЕ ЮЗАЕТСЯ В ПОЛНОЙ МЕРЕ
//----
.lesson-type.lab {
  background: $lab;
}

//-----



.lesson-item:last-child {
  margin-bottom: 0;
}

.lesson-type {
  color: #ece8e8;
  display: inline-block;
  padding: 2px 6px;
  border-radius: 3px;
  font-size: 0.8em;
  margin-bottom: 5px;
}

.lesson-text {
  font-weight: 500;
  margin-bottom: 3px;
  line-height: 1.4;

  @media (max-width: 1200px){
    font-size: 12px;
  }

  @media (max-width: 1100px) {
    font-size: 11px;
  }
}

.lesson-teacher,
.lesson-classroom {
  font-size: 0.9em;
}

// .lesson-empty {
//   text-align: center;
//   font-style: italic;
// }

.schedule-header {
  padding: 15px;
  border-radius: 8px;
  margin-bottom: 20px;
}

.schedule-header h3 {
  margin: 0 0 10px 0;
  color: #333;
}

.lesson-type {
  display: inline-block;
  padding: 2px 6px;
  border-radius: 3px;
  font-size: 0.8em;
  margin-bottom: 5px;
  color: white;
}



.lesson-type.default {
  background: #6c757d;
  /* серый по умолчанию */
}

